Finalised speech output system

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,9 @@ dmypy.json
 
 dataset/
 ModelCreation/data.pickle
-Old  Models/
+Old Models/
 Outdated Files/
 output.mp4
+word.mp3
+video_to_gif_converter.py
+Itworks.webm
